Server: Use openapi-generator to generate some responses and models
